--- a/Evo3/app/src/main/AndroidManifest.xml
+++ b/Evo3/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <uses-sdk android:minSdkVersion="22" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -16,6 +17,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity2Activity"
+            android:label="@string/title_activity_main_activity2" >
         </activity>
     </application>
 
