--- a/Evo3/app/src/main/AndroidManifest.xml
+++ b/Evo3/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
+        android:largeHeap="true"
+        android:theme="@style/AppTheme" >
         <uses-sdk android:minSdkVersion="22" />
 
         <activity
